--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-opencv-python==4.2.0.34
-opencv-contrib-python==4.2.0.34
-Pillow==9.0.1
-h5py==2.10.0
-imutils==0.5.3
+opencv-python
+opencv-contrib-python==3.4.17.63
+Pillow
+h5py
+imutils
 
